# apps/backend/src/saas_core/modules/shared/billing/serializers.py
@@ -1,0 +1,5 @@
+from rest_framework import serializers
+
+
+class StripeWebhookReceiptSerializer(serializers.Serializer):
+    received = serializers.BooleanField()
